--- a/object.html
+++ b/object.html
@@ -10,5 +10,5 @@
 </body>
 </html>
 <script src="JS/JQuery/jquery-3.3.1.min.js"></script>
-<!--<script src="JS/objectClass.js"></script>-->
-<script src="JS/匿名自执行函数.js"></script>
+<script src="JS/objectClass.js"></script>
+<!--<script src="JS/匿名自执行函数.js"></script>-->
