--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
 }
 div:hover {
 	box-shadow: rgb(186, 186, 186) 0px 0px 20px;
+
 }
+
+
+
+ span {
+
+    // background: linear-gradient(to right, red, blue);
+     background: linear-gradient(to right, red, rgb(221,196,229));
+     -webkit-background-clip: text;
+     color: transparent;
+     font-weight: bold;
+     font-size: 25px;
+     /*background:  radial-gradient(circle, #CDDC39, #8BC34A);*/
+
+ }
+    .divImg{
+        /*background-image: url(images/tt.png) ;*/
+
+        /*background-repeat: no-repeat;*/
+        background: rgb(1,159,232);
+    }
+
 </style>
 <script  src="JS/JQuery/jquery-3.3.1.min.js"></script>
 <script src="JS/循环.js"></script>
@@ -34,5 +56,8 @@ div:hover {
 <div class="shadow"> </div>
 <!--<div class="shadow"> </div>
 <div class="shadow"> </div>-->
+<div class="divImg">
+<span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TT&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;交&nbsp;&nbsp;易&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br/>1</span>
+</div>
 </body>
 </html>
