--- a/cors.html
+++ b/cors.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<input type="submit" value="重定向测试" id="redirect"/>
+<input type="submit" value="获取跨域数据" id="corsGetData"/>
+<input type="submit" value="token提交" id="submitWithToken"/>
 </body>
 </html>
+<script src="JS/JQuery/jquery-3.3.1.min.js"></script>
 <script src="JS/cors.js"></script>
